// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Vegan Gelato Engine — real Mapper formulation matrix > almond routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.193,
    "fiber": 4.457,
    "ice": 45.903,
    "ingredients": [
      {
        "grams": 460,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 224,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 47,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 166,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 54,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 47,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 41.145,
    "pac": 27.57,
    "pod": 21.416,
    "protein": 0.157,
    "score": 10,
    "solids": 32.992,
    "sugars": 22.287,
    "temperature": -11,
    "violations": [],
    "water": 67.008,
  },
  {
    "batch": 1000,
    "fat": 5.85,
    "fiber": 5.005,
    "ice": 50.282,
    "ingredients": [
      {
        "grams": 397,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 53,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 145,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 100,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 53.083,
    "pac": 33.689,
    "pod": 22.58,
    "protein": 0.175,
    "score": 10,
    "solids": 36.536,
    "sugars": 24.502,
    "temperature": -12,
    "violations": [],
    "water": 63.464,
  },
  {
    "batch": 1000,
    "fat": 5.85,
    "fiber": 5.005,
    "ice": 49.532,
    "ingredients": [
      {
        "grams": 397,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 53,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 95,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 150,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 58.607,
    "pac": 37.429,
    "pod": 20.984,
    "protein": 0.175,
    "score": 10,
    "solids": 36.136,
    "sugars": 24.102,
    "temperature": -13,
    "violations": [],
    "water": 63.864,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > banana routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 0.9,
    "fiber": 7.63,
    "ice": 49.129,
    "ingredients": [
      {
        "grams": 860,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 27,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 9,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 15,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 4,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 83,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 38.089,
    "pac": 26.266,
    "pod": 18.852,
    "protein": 0.86,
    "score": 10,
    "solids": 31.039,
    "sugars": 17.692,
    "temperature": -11,
    "violations": [],
    "water": 68.961,
  },
  {
    "batch": 1000,
    "fat": 1.1,
    "fiber": 1.87,
    "ice": 50.333,
    "ingredients": [
      {
        "grams": 876,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 24,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 11,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 49,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 19,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 19,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 46.977,
    "pac": 32.736,
    "pod": 23.591,
    "protein": 0.876,
    "score": 10,
    "solids": 30.315,
    "sugars": 22.766,
    "temperature": -12,
    "violations": [],
    "water": 69.685,
  },
  {
    "batch": 1000,
    "fat": 3.6,
    "fiber": 0.79,
    "ice": 49.757,
    "ingredients": [
      {
        "grams": 873,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 0,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 36,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 63,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 19,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 7,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 50.827,
    "pac": 34.052,
    "pod": 24.931,
    "protein": 0.873,
    "score": 10,
    "solids": 33.005,
    "sugars": 24.111,
    "temperature": -13,
    "violations": [],
    "water": 66.996,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > calculates verified pea/rice proteins without any dairy gate 1`] = `
{
  "batch": 1000,
  "fat": 5.765,
  "fiber": 4.994,
  "ice": 49.498,
  "ingredients": [
    {
      "grams": 377,
      "id": "PI-ING-001409",
      "main": false,
      "name": "Water",
    },
    {
      "grams": 250,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 53,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 95,
      "id": "PI-ING-000514",
      "main": false,
      "name": "Sucrose",
    },
    {
      "grams": 150,
      "id": "PI-ING-000494",
      "main": false,
      "name": "Dextrose (monohydrate)",
    },
    {
      "grams": 53,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "Tara gum",
    },
    {
      "grams": 10,
      "id": "PI-ING-000451",
      "main": false,
      "name": "PEA PROTEIN · Protein · Dry",
    },
    {
      "grams": 10,
      "id": "PI-ING-000452",
      "main": false,
      "name": "RICE PROTEIN · Protein · Dry",
    },
  ],
  "npac": 59.765,
  "pac": 37.213,
  "pod": 20.737,
  "protein": 1.757,
  "score": 10,
  "solids": 37.734,
  "sugars": 24.325,
  "violations": [],
  "water": 62.266,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > cocoa routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.807,
    "fiber": 7.12,
    "ice": 52.367,
    "ingredients": [
      {
        "grams": 240,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 365,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 221,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 0,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 151,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 21,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 35.021,
    "pac": 19.984,
    "pod": 17.532,
    "protein": 4.624,
    "score": 10,
    "solids": 42.936,
    "sugars": 17.938,
    "temperature": -11,
    "violations": [],
    "water": 57.064,
  },
  {
    "batch": 1000,
    "fat": 5.316,
    "fiber": 6.482,
    "ice": 50.358,
    "ingredients": [
      {
        "grams": 218,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 352,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 232,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 0,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 139,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 57,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 44.012,
    "pac": 25.116,
    "pod": 18.819,
    "protein": 4.213,
    "score": 10,
    "solids": 42.934,
    "sugars": 20.095,
    "temperature": -12,
    "violations": [],
    "water": 57.066,
  },
  {
    "batch": 1000,
    "fat": 5.358,
    "fiber": 6.54,
    "ice": 49.781,
    "ingredients": [
      {
        "grams": 220,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 351,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 229,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 0,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 98,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 100,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 50.004,
    "pac": 28.519,
    "pod": 17.635,
    "protein": 4.25,
    "score": 10,
    "solids": 42.967,
    "sugars": 19.939,
    "temperature": -13,
    "violations": [],
    "water": 57.033,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > keeps the invalid coconut-milk high-water reference blocked and rescues a verified high-water alternative 1`] = `
{
  "before": {
    "batch": 1000,
    "fat": 2.325,
    "fiber": 4.93,
    "ice": 50.575,
    "ingredients": [
      {
        "grams": 250,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 550,
        "id": "water",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 20,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 70,
        "id": "sucrose",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 55,
        "id": "dextrose",
        "main": false,
        "name": "Dextrose",
      },
      {
        "grams": 53,
        "id": "inulin",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "tara_gum",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 22.615,
    "pac": 17.814,
    "pod": 11.769,
    "protein": 0.1,
    "score": 5,
    "solids": 21.226,
    "sugars": 13.085,
    "violations": [
      "npac",
      "pod",
      "water",
      "total_solids",
    ],
    "water": 78.774,
  },
  "rejectedAfter": {
    "batch": 1000,
    "fat": 1.634,
    "fiber": 19.15,
    "ice": 49.669,
    "ingredients": [
      {
        "grams": 180,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 396,
        "id": "water",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 14,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 51,
        "id": "sucrose",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 146,
        "id": "dextrose",
        "main": false,
        "name": "Dextrose",
      },
      {
        "grams": 211,
        "id": "inulin",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "tara_gum",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 53.877,
    "pac": 31.485,
    "pod": 15.778,
    "protein": 0.072,
    "score": 10,
    "solids": 41.561,
    "sugars": 19.27,
    "violations": [],
    "water": 58.439,
  },
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > neutral routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.098,
    "fiber": 4.57,
    "ice": 45.58,
    "ingredients": [
      {
        "grams": 448,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 229,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 48,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 169,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 55,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 49,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 41.451,
    "pac": 27.614,
    "pod": 21.583,
    "protein": 0.092,
    "score": 10,
    "solids": 33.382,
    "sugars": 22.899,
    "temperature": -11,
    "violations": [],
    "water": 66.618,
  },
  {
    "batch": 1000,
    "fat": 5.625,
    "fiber": 4.93,
    "ice": 50.292,
    "ingredients": [
      {
        "grams": 397,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 53,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 145,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 100,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 51.979,
    "pac": 33.18,
    "pod": 22.333,
    "protein": 0.1,
    "score": 10,
    "solids": 36.166,
    "sugars": 24.725,
    "temperature": -12,
    "violations": [],
    "water": 63.834,
  },
  {
    "batch": 1000,
    "fat": 5.625,
    "fiber": 4.93,
    "ice": 49.565,
    "ingredients": [
      {
        "grams": 397,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 53,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 95,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 150,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 57.478,
    "pac": 36.921,
    "pod": 20.737,
    "protein": 0.1,
    "score": 10,
    "solids": 35.766,
    "sugars": 24.325,
    "temperature": -13,
    "violations": [],
    "water": 64.234,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > pistachio routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 11.98,
    "fiber": 3,
    "ice": 46.791,
    "ingredients": [
      {
        "grams": 266,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 539,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 8,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 0,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 148,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 35,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 2,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 40.303,
    "pac": 23.005,
    "pod": 19.264,
    "protein": 5.323,
    "score": 10,
    "solids": 42.921,
    "sugars": 20.101,
    "temperature": -11,
    "violations": [],
    "water": 57.079,
  },
  {
    "batch": 1000,
    "fat": 11.97,
    "fiber": 2.82,
    "ice": 50.331,
    "ingredients": [
      {
        "grams": 266,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 545,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 0,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 102,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 85,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 47.279,
    "pac": 27.106,
    "pod": 18.035,
    "protein": 5.32,
    "score": 10,
    "solids": 42.668,
    "sugars": 20.068,
    "temperature": -12,
    "violations": [],
    "water": 57.332,
  },
  {
    "batch": 1000,
    "fat": 11.999,
    "fiber": 2.76,
    "ice": 49.753,
    "ingredients": [
      {
        "grams": 260,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 329,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 230,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 0,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 71,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 108,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 50.964,
    "pac": 29.085,
    "pod": 17.398,
    "protein": 5.292,
    "score": 10,
    "solids": 42.931,
    "sugars": 19.981,
    "temperature": -13,
    "violations": [],
    "water": 57.069,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > preserves the Strawberry/Banana 1:1 Multi-Main contract 1`] = `
{
  "batch": 1000,
  "fat": 1.92,
  "fiber": 3.752,
  "ice": 49.758,
  "ingredients": [
    {
      "grams": 401,
      "id": "PI-ING-001589",
      "main": true,
      "name": "BANANA · Puree",
    },
    {
      "grams": 401,
      "id": "PI-ING-001553",
      "main": true,
      "name": "STRAWBERRIES · Fresh Fruit",
    },
    {
      "grams": 0,
      "id": "PI-ING-001409",
      "main": false,
      "name": "Water",
    },
    {
      "grams": 0,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 18,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 93,
      "id": "PI-ING-000514",
      "main": false,
      "name": "Sucrose",
    },
    {
      "grams": 54,
      "id": "PI-ING-000494",
      "main": false,
      "name": "Dextrose (monohydrate)",
    },
    {
      "grams": 31,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "Tara gum",
    },
  ],
  "npac": 50.793,
  "pac": 34.019,
  "pod": 23.718,
  "protein": 0.682,
  "score": 10,
  "solids": 33.023,
  "sugars": 23.972,
  "violations": [],
  "water": 66.976,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > preserves the Strawberry/Banana 2:1 Multi-Main contract 1`] = `
{
  "batch": 1000,
  "fat": 2.083,
  "fiber": 2.78,
  "ice": 49.759,
  "ingredients": [
    {
      "grams": 550,
      "id": "PI-ING-001589",
      "main": true,
      "name": "BANANA · Puree",
    },
    {
      "grams": 275,
      "id": "PI-ING-001553",
      "main": true,
      "name": "STRAWBERRIES · Fresh Fruit",
    },
    {
      "grams": 0,
      "id": "PI-ING-001409",
      "main": false,
      "name": "Water",
    },
    {
      "grams": 0,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 20,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 92,
      "id": "PI-ING-000514",
      "main": false,
      "name": "Sucrose",
    },
    {
      "grams": 38,
      "id": "PI-ING-000494",
      "main": false,
      "name": "Dextrose (monohydrate)",
    },
    {
      "grams": 23,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "Tara gum",
    },
  ],
  "npac": 50.777,
  "pac": 34.017,
  "pod": 24.615,
  "protein": 0.743,
  "score": 10,
  "solids": 33.007,
  "sugars": 24.411,
  "violations": [],
  "water": 66.993,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > strawberry routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 1.836,
    "fiber": 1.732,
    "ice": 47.554,
    "ingredients": [
      {
        "grams": 786,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 0,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 16,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 194,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 2,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 39.58,
    "pac": 27.704,
    "pod": 24.982,
    "protein": 0.55,
    "score": 10,
    "solids": 30.006,
    "sugars": 24.143,
    "temperature": -11,
    "violations": [],
    "water": 69.994,
  },
  {
    "batch": 1000,
    "fat": 1.435,
    "fiber": 1.726,
    "ice": 50.357,
    "ingredients": [
      {
        "grams": 783,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 0,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 12,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 167,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 36,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 0,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 44.167,
    "pac": 30.917,
    "pod": 24.576,
    "protein": 0.548,
    "score": 10,
    "solids": 30.001,
    "sugars": 24.553,
    "temperature": -12,
    "violations": [],
    "water": 69.999,
  },
  {
    "batch": 1000,
    "fat": 3.324,
    "fiber": 2.014,
    "ice": 49.781,
    "ingredients": [
      {
        "grams": 747,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 0,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 0,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 31,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 158,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 58,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 4,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 50.004,
    "pac": 33.498,
    "pod": 24.924,
    "protein": 0.523,
    "score": 10,
    "solids": 33.009,
    "sugars": 25.469,
    "temperature": -13,
    "violations": [],
    "water": 66.991,
  },
]
`;
